@@ -110,7 +110,7 @@ use IO::Socket::INET;
 use Log::Handler;
 use Params::Validate qw();
 
-our $VERSION = "0.2";
+our $VERSION = "0.3";
 
 sub new {
     my $class = shift;
@@ -149,6 +149,7 @@ sub new {
         );
     };
 
+    $self->log->notice("$class initialized");
     return $self;
 }
 
