@@ -72,7 +72,7 @@ use warnings;
 use Log::Handler;
 use Params::Validate qw();
 
-our $VERSION = "0.2";
+our $VERSION = "0.3";
 
 sub new {
     my $class = shift;
@@ -89,6 +89,7 @@ sub new {
     }
 
     $self->{log} = Log::Handler->get_logger("awesant");
+    $self->log->notice("$class initialized");
 
     return $self;
 }
