@@ -1,3 +1,7 @@
+awesant (0.5) released at 2012-12-02
+
+    * Added Socket Output.
+
 awesant (0.4) released at 2012-11-15
 
     * Implemented a extended add_field feature.
